# tekstigeneraattori

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
docs/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
material/: alice.txt  dogs.txt  kalevala.txt  moby_dick.txt  test.txt
src/: animation.py  data_parser.py  index.py  main.py  trie.py
src/tests/: border_test.py  data_parser_test.py  performance_test.py  trie_and_material_test.py  trie_test.py
