[tool.poetry]
name = "tekstigeneraattori"
version = "0.1.0"
description = "Aineopintojen harjoitustyö: Algoritmit ja tekoäly"
authors = ["doomwall <tuomo.valkila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
