[tool.poetry]
name = "tekstigeneraattori"
version = "0.1.0"
description = "Aineopintojen harjoitustyö: Algoritmit ja tekoäly"
authors = ["doomwall <tuomo.valkila@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "^0.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
coverage = "^7.10.6"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
tests = "coverage run --branch -m pytest src"
coverage = "coverage report -m"